Fix deploy workflow by removing sudo service reload

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
+          port: 22
           script_stop: true
           script: |
             set -e
@@ -24,7 +25,4 @@ jobs:
             git reset --hard origin/main
             git clean -fd
             if [ -f /tmp/brokeant.env ]; then mv /tmp/brokeant.env .env; fi
-            if [ -f .env ]; then chown deploy:deploy .env; fi
             git update-index --skip-worktree .env || true
-            sudo systemctl reload nginx
-            sudo systemctl reload php8.3-fpm || true
