--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,42 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy via SSH
+      - name: Validate required secrets
+        run: |
+          if [ -z "${{ secrets.VPS_HOST }}" ]; then
+            echo "Missing secret: VPS_HOST"
+            exit 1
+          fi
+          if [ -z "${{ secrets.VPS_USER }}" ]; then
+            echo "Missing secret: VPS_USER"
+            exit 1
+          fi
+          if [ -z "${{ secrets.VPS_PASSWORD }}" ] && [ -z "${{ secrets.VPS_SSH_KEY }}" ]; then
+            echo "Missing auth secret: set VPS_PASSWORD or VPS_SSH_KEY"
+            exit 1
+          fi
+
+      - name: Deploy via SSH (password)
+        if: ${{ secrets.VPS_PASSWORD != '' }}
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: 22
+          script_stop: true
+          script: |
+            set -e
+            cd /var/www/brokeant
+            if [ -f .env ]; then cp .env /tmp/brokeant.env; fi
+            git fetch origin
+            git reset --hard origin/main
+            git clean -fd
+            if [ -f /tmp/brokeant.env ]; then mv /tmp/brokeant.env .env; fi
+            git update-index --skip-worktree .env || true
+
+      - name: Deploy via SSH (key fallback)
+        if: ${{ secrets.VPS_PASSWORD == '' && secrets.VPS_SSH_KEY != '' }}
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.VPS_HOST }}
