--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,48 +8,32 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      VPS_HOST: ${{ secrets.VPS_HOST }}
+      VPS_USER: ${{ secrets.VPS_USER }}
+      VPS_PASSWORD: ${{ secrets.VPS_PASSWORD }}
     steps:
       - name: Validate required secrets
         run: |
-          if [ -z "${{ secrets.VPS_HOST }}" ]; then
+          if [ -z "$VPS_HOST" ]; then
             echo "Missing secret: VPS_HOST"
             exit 1
           fi
-          if [ -z "${{ secrets.VPS_USER }}" ]; then
+          if [ -z "$VPS_USER" ]; then
             echo "Missing secret: VPS_USER"
             exit 1
           fi
-          if [ -z "${{ secrets.VPS_PASSWORD }}" ] && [ -z "${{ secrets.VPS_SSH_KEY }}" ]; then
-            echo "Missing auth secret: set VPS_PASSWORD or VPS_SSH_KEY"
+          if [ -z "$VPS_PASSWORD" ]; then
+            echo "Missing secret: VPS_PASSWORD"
             exit 1
           fi
 
-      - name: Deploy via SSH (password)
-        if: ${{ secrets.VPS_PASSWORD != '' }}
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          password: ${{ secrets.VPS_PASSWORD }}
-          port: 22
-          script_stop: true
-          script: |
-            set -e
-            cd /var/www/brokeant
-            if [ -f .env ]; then cp .env /tmp/brokeant.env; fi
-            git fetch origin
-            git reset --hard origin/main
-            git clean -fd
-            if [ -f /tmp/brokeant.env ]; then mv /tmp/brokeant.env .env; fi
-            git update-index --skip-worktree .env || true
-
-      - name: Deploy via SSH (key fallback)
-        if: ${{ secrets.VPS_PASSWORD == '' && secrets.VPS_SSH_KEY != '' }}
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
+          host: ${{ env.VPS_HOST }}
+          username: ${{ env.VPS_USER }}
+          password: ${{ env.VPS_PASSWORD }}
           port: 22
           script_stop: true
           script: |
